--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "compromise": "^14.14.4",
     "express": "^4.21.2",
     "mongodb": "^6.15.0"
   },
