--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "axios": "^1.8.4",
     "compromise": "^14.14.4",
     "express": "^4.21.2",
-    "mongodb": "^6.15.0"
+    "mongodb": "^6.15.0",
+    "node-poppler": "^7.2.4"
   },
   "devDependencies": {
     "w3c-html-validator": "^1.8.3"
