--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "express": "^4.21.2",
     "moment": "^2.30.1",
     "mongodb": "^6.15.0",
-    "node-poppler": "^7.2.4"
+    "node-poppler": "^7.2.4",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
