--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "compromise": "^14.14.4",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "moment": "^2.30.1",
     "mongodb": "^6.15.0",
