--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "compromise": "^14.14.4",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
+    "express-handlebars": "^8.0.1",
     "moment": "^2.30.1",
     "mongodb": "^6.15.0",
     "node-poppler": "^7.2.4",
