--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-export GH_CLIENT_ID="[APP CLIENT ID]"
-export GH_CLIENT_SECRET="[APP SECRET]"
-export PORT=3000
+GH_CLIENT_ID="[APP CLIENT ID]"
+GH_CLIENT_SECRET="[APP SECRET]"
+PORT=3000
