--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcryptjs": "^3.0.2",
     "compromise": "^14.14.4",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "moment": "^2.30.1",
