--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mongodb": "^6.15.0",
     "multer": "^1.4.5-lts.2",
     "node-poppler": "^7.2.4",
+    "octokit": "^4.1.3",
     "util": "^0.12.5"
   },
   "devDependencies": {
