--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "multer": "^1.4.5-lts.2",
     "node-poppler": "^7.2.4",
     "octokit": "^4.1.3",
+    "plotly.js-dist": "^3.0.1",
     "util": "^0.12.5"
   },
   "devDependencies": {
