--- a/package.json
+++ b/package.json
@@ -1,58 +1,58 @@
 {
-  "name": "gitmatches",
-  "contributors": [
-    "Anna Hauk",
-    "Christopher Kalish",
-    "Benicio Hernandez",
-    "Zakariyya Scavotto",
-    "Nelson Bermeo"
-  ],
-  "version": "0.0.0-1",
-  "description": "An awesome service to help you find collaborators",
-  "keywords": [
-    "git",
-    "development",
-    "project",
-    "collaborators"
-  ],
-  "homepage": "https://github.com/annahauk/cs-546#readme",
-  "bugs": {
-    "url": "https://github.com/annahauk/cs-546/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/annahauk/cs-546.git"
-  },
-  "license": "GPL-3.0-or-later",
-  "author": "",
-  "type": "module",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js",
-    "dev": "npx nodemon --signal SIGINT",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node /data/db_seed.js"
-  },
-  "dependencies": {
-    "axios": "^1.8.4",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
-    "compromise": "^14.14.4",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "express-handlebars": "^8.0.1",
-    "moment": "^2.30.1",
-    "mongodb": "^6.15.0",
-    "multer": "^1.4.5-lts.2",
-    "node-poppler": "^7.2.4",
-    "octokit": "^4.1.3",
-    "plotly.js-dist": "^3.0.1",
-    "util": "^0.12.5"
-  },
-  "devDependencies": {
-    "@octokit/types": "^14.0.0",
-    "nodemon": "^3.1.10",
-    "w3c-html-validator": "^1.8.3"
-  }
+	"name": "gitmatches",
+	"contributors": [
+		"Anna Hauk",
+		"Christopher Kalish",
+		"Benicio Hernandez",
+		"Zakariyya Scavotto",
+		"Nelson Bermeo"
+	],
+	"version": "0.0.0-1",
+	"description": "An awesome service to help you find collaborators",
+	"keywords": [
+		"git",
+		"development",
+		"project",
+		"collaborators"
+	],
+	"homepage": "https://github.com/annahauk/cs-546#readme",
+	"bugs": {
+		"url": "https://github.com/annahauk/cs-546/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/annahauk/cs-546.git"
+	},
+	"license": "GPL-3.0-or-later",
+	"author": "",
+	"type": "module",
+	"main": "app.js",
+	"scripts": {
+		"start": "node app.js",
+		"dev": "npx nodemon --signal SIGINT",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"seed": "node ./data/db_seed.js"
+	},
+	"dependencies": {
+		"axios": "^1.8.4",
+		"bcrypt": "^5.1.1",
+		"bcryptjs": "^3.0.2",
+		"compromise": "^14.14.4",
+		"cookie-parser": "^1.4.7",
+		"dotenv": "^16.5.0",
+		"express": "^4.21.2",
+		"express-handlebars": "^8.0.1",
+		"moment": "^2.30.1",
+		"mongodb": "^6.15.0",
+		"multer": "^1.4.5-lts.2",
+		"node-poppler": "^7.2.4",
+		"octokit": "^4.1.3",
+		"plotly.js-dist": "^3.0.1",
+		"util": "^0.12.5"
+	},
+	"devDependencies": {
+		"@octokit/types": "^14.0.0",
+		"nodemon": "^3.1.10",
+		"w3c-html-validator": "^1.8.3"
+	}
 }
