--- a/.w3c-ignore
+++ b/.w3c-ignore
@@ -1,1 +1,2 @@
 /^Consider using the “h1” element as a top-level heading/
+/^Attribute “aria-activedescendant” value should either refer to a descendant element/
